--- a/.github/workflows/CMake.yml
+++ b/.github/workflows/CMake.yml
@@ -14,8 +14,10 @@ jobs:
     - name: Generate FERS
       run: |
         mkdir build
+        ls
         cd build
-        cmake -D FERS_LIB_HDF5="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5.so" -D FERS_LIB_HDF5_HL="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5_hl.so" -D CMAKE_CXX_FLAGS="-I/usr/include/hdf5/serial/" ../
+        ls
+        cmake ../../ -D FERS_LIB_HDF5="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5.so" -D FERS_LIB_HDF5_HL="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5_hl.so" -D CMAKE_CXX_FLAGS="-I/usr/include/hdf5/serial/" 
 
     - name: Build FERS
       run: |
