--- a/.github/workflows/CMake.yml
+++ b/.github/workflows/CMake.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         sudo mkdir build
         sudo ls -a
-        sudo cd build
+        cd build
         sudo ls
         sudo cmake ../ -D FERS_LIB_HDF5="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5.so" -D FERS_LIB_HDF5_HL="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5_hl.so" -D CMAKE_CXX_FLAGS="-I/usr/include/hdf5/serial/" 
     
