--- a/.github/workflows/CMake.yml
+++ b/.github/workflows/CMake.yml
@@ -18,7 +18,7 @@ jobs:
         cd build
         pwd # This will print the current working directory after cd
         ls -a 
-        cmake .. -D FERS_LIB_HDF5="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5.so" -D FERS_LIB_HDF5_HL="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5_hl.so" -D CMAKE_CXX_FLAGS="-I/usr/include/hdf5/serial/" 
+        cmake -S .. -B . -D FERS_LIB_HDF5="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5.so" -D FERS_LIB_HDF5_HL="/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5_hl.so" -D CMAKE_CXX_FLAGS="-I/usr/include/hdf5/serial/" 
 
     - name: Build FERS
       run: |
