--- a/.github/workflows/CMake.yml
+++ b/.github/workflows/CMake.yml
@@ -7,13 +7,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+    
+    - name: Checkout project and submodules
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
+        
     - name: Install Requried Libs for FERS
       run: sudo apt-get install libboost-all-dev libfftw3-dev libhdf5-dev libhdf5-serial-dev build-essential cmake cmake-qt-gui python-all-dev libtinyxml-dev
 
     - name: Generate FERS
       run: |
-        cd ..
         pwd
         ls -a
         mkdir build
