--- a/.github/workflows/ReleaseCMake.yml
+++ b/.github/workflows/ReleaseCMake.yml
@@ -29,8 +29,8 @@ jobs:
 
     - name: Prepare FERS for zip
       run: |
-            mkdir ../toZip
-            cp build/src/fers ../toZip/fers
+            mkdir /toZip
+            cp build/src/fers /toZip/fers
     
     - name: Go nack to home
       run: cd ..
@@ -52,21 +52,21 @@ jobs:
 
     - name: Prepare Validator for zip
       run: |
-            cp config_validators/build/xml_validator_output ../toZip/xml_validator_output
-            cp config_validators/build/kml_visualiser ../toZip/kml_visualiser
-            cp config_validators/build/validator ../toZip/validator
+            cp config_validators/build/xml_validator_output /toZip/xml_validator_output
+            cp config_validators/build/kml_visualiser /toZip/kml_visualiser
+            cp config_validators/build/validator /toZip/validator
 
     - name: Zip Docs and Build
       uses: TheDoctor0/zip-release@0.7.6
       with:
        directory: /toZip # File to add to the archive
-       path: ./*
+       path: /*
        Filename: FERS.zip # The name of the archive file
 
     - name: Upload to Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          build/toZip/FERS.zip
+          /toZip/FERS.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
