--- a/.github/workflows/CMake.yml
+++ b/.github/workflows/CMake.yml
@@ -14,7 +14,7 @@ jobs:
         submodules: recursive
         
     - name: Update
-      run: apt-get update 
+      run: sudo apt-get update 
 
     - name: Install Requried Libs for FERS
       run: sudo apt-get install libboost-all-dev libfftw3-dev libhdf5-dev libhdf5-serial-dev build-essential cmake cmake-qt-gui python-all-dev libtinyxml-dev
